assignment 6 lesson 4 LS202 day 2 progress 1

--- a/ls202/lesson4/assignment6-nutrition-label.html
+++ b/ls202/lesson4/assignment6-nutrition-label.html
@@ -13,11 +13,18 @@
     table {
       border-collapse: collapse;
       max-width: 750px;
+      border: solid black 5px;
     }
+
+
 
     th, td {
       padding-block: 2px;
       padding-inline: 3px;
+    }
+
+    dl {
+      display: block
     }
 
     .thick-lower-border {
@@ -66,6 +73,8 @@
     .align-text-right {
       text-align: right;
     }
+
+
 
   </style>
 </head>
@@ -185,8 +194,35 @@
         </td>
       </tr>
 
+      <!-- new table -->
+
+      <table>
+        <tr class="outline-lower-border">
+          <td class="small-text align-text-right" colspan="3">Calories:</td>
+          <td class="small-text align-text-left">2,000</td>
+        <td class="small-text align-text-left">2,500</td>
+        </tr>
+
+        <tr>
+          <td>
+            <dl>
+              <dt>Total Fat</dt>
+              <dd>8g</dd>
+            </dl>
+          </td>
+        </tr>
+
+      </table>
+
+      
+
+
+
     </tbody>
   </table>
+
+
+
   
 </body>
 </html>
