problem 6 assignment 7 lesson 5 LS202

--- a/ls202/lesson5/assignment7-5.html
+++ b/ls202/lesson5/assignment7-5.html
@@ -29,7 +29,7 @@
 
       <dt><label for="message">Message</label></dt>
       <dd>
-        <textarea name="message" id="message" rows="6" cols="80"></textarea>
+        <textarea name="message" id="message" rows="6" cols="80" placeholder="Type your message here."></textarea>
       </dd>
     </dl>
 
