assignment 6 lesson 7 LS202 completed files

--- a/ls202/lesson7/assignment6_company_splash_page/splash_page.html
+++ b/ls202/lesson7/assignment6_company_splash_page/splash_page.html
@@ -6,21 +6,25 @@
   <title>Company Splash Page</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-
-
   <div class="width-container">
     <header>
       <img src="logo.png" id="spacedesign-logo" alt="the SpaceDesign logo">
     </header>
     <main>
-      <h2>About Us</h2>
+      <h2>&bull; &nbsp; About Us &nbsp; &bull;</h2>
+
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure in.</p>
-      <h2>Our Founder</h2>
+
+      <h2>&bull; &nbsp; Our Founder &nbsp; &bull;</h2>
+
       <h3>Admiral Kerning</h3>
+
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in.</p>
     </main>
     <footer>
